Fixed the footer so it center aligns properly.

--- a/views/sass/_footer.sass
+++ b/views/sass/_footer.sass
@@ -1,11 +1,4 @@
 footer
-  +row($margin_p)
-  @media (min-width: 600px)
-    @include row($margin_t)
-  @media (min-width: 1024px)
-    @include row($margin_s)
-  @media (min-width: 1920px)
-    @include row($margin_l)
   div 
     @extend %box
     text-align: center
